feat: added new entities publisher and author with endpoints, added slick and its config (#167)
* feat: added new entities publisher and author with endpoints, added slick and its config

* feat: added fly way using fly4s and added first migrations

* chore: commented book api tests

* chore: update ci scala base